CELE-18 Add example with pagination
